src/objects/IR_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <label>Campaign Id</label>
        <length>11</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <description>Marketo Client ID</description>
        <label>Client ID</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>Marketo Client Secret</description>
        <label>Client Secret</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instance_ID__c</fullName>
        <description>Marketo Instance ID (eg: &apos;abc-123-xyz&apos;)</description>
        <label>Instance ID</label>
        <length>11</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>IR Settings</label>
</CustomObject>